<resources>
    <string name="app_name">Modern_UI_LOGIN</string>
    <string name="background">Background</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign up</string>
</resources>
