<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        android:src="@drawable/background_image_one_signin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="8dp"
        android:text="@string/welcome_back"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <EditText
            android:id="@+id/ue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="#292929"
            android:textColorHint="#797979" />

        <RelativeLayout
            android:id="@+id/e1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="30dp"
            android:background="#999999" />

        <EditText
            android:id="@+id/p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="#292929"
            android:textColorHint="#797979" />

        <RelativeLayout
            android:id="@+id/e2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="30dp"
            android:background="#999999" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#4E525B"
                android:elevation="0dp"
                android:src="@drawable/round_arrow_forward_24"
                android:tint="@android:color/white"
                app:elevation="0dp"
                app:fabCustomSize="80dp"
                tools:ignore="RelativeOverlap" />

            <Button
                android:id="@+id/s_in"
                style="?android:borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="30dp"
                android:padding="15dp"
                android:text="@string/sign_in"
                android:textColor="#191919"
                android:textSize="25sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp">

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="30dp"
                android:padding="15dp"
                android:text="@string/sign_up"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="30dp"
                android:padding="15dp"
                android:text="@string/forgot_password"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>