<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SIgnupActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_image_one_signup" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:text="@string/welcome_back"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <EditText
            android:id="@+id/uname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <RelativeLayout
            android:id="@+id/name_b"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="30dp"
            android:background="#B1B1B1" />

        <EditText
            android:id="@+id/email_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <RelativeLayout
            android:id="@+id/name_b1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="30dp"
            android:background="#B1B1B1" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <RelativeLayout
            android:id="@+id/name_b2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="30dp"
            android:background="#B1B1B1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">


            <Button
                android:id="@+id/sign"
                style="?android:borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="30dp"
                android:padding="15dp"
                android:text="@string/sign_up"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/log_in"
                style="?android:borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="30dp"
                android:padding="15dp"
                android:text="@string/sign_in"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#4E525B"
                android:elevation="0dp"
                android:src="@drawable/round_arrow_forward_24"
                android:tint="@android:color/white"
                app:elevation="0dp"
                app:fabCustomSize="80dp"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
